feat(project) added enum Constants